[package]
name = "p11e"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2018"

## Build Configurations
#
[features]
default = ["dev_build"]
# default = []

# Enable print!() and println!() log to console and msvc debugger.
#   When disabled, they are no-ops (and do not evaluate their arguments!)
#   Enabling this significantly increases binary size.
dev_build = ["enable_logging"]
enable_logging = []

## Dependencies
#
[dependencies]
libc = "0.2.54"
cfg-if = "0.1"

[dependencies.nalgebra]
version = "0.18"
default-features = false

[target.'cfg(windows)'.dependencies.winapi]
version = '0.3'
features = [
    "debugapi",
    "errhandlingapi",
    "libloaderapi",
    "profileapi",
    "timeapi",
    "wingdi",
    "winuser",
]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[profile.release]
debug = true
panic = "abort"
debug-assertions = false
incremental = false
lto = true
opt-level = "z"
overflow-checks = false
rpath = false
